[build-system]
requires = ["setuptools>=61.2", "cython==0.29.34", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[project]
name = "sklearn-quantile"
description = "README.md"
dynamic = ["version"]

# [tool.setuptools]
# include-package-data = false

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
	"matplotlib",
	"numpy",
	"scikit-learn>=1.0",
	"pytest",
	"setuptools",
	"cython",
	"sphinx",
	"sphinx_rtd_theme",
	"numpydoc",
	"jupyter",
	"pandas",
	"packaging",
]
